feat: changes to the header

--- a/apps/web-app/amplify/backend/backend-config.json
+++ b/apps/web-app/amplify/backend/backend-config.json
@@ -83,5 +83,12 @@
         ]
       }
     }
+  },
+  "storage": {
+    "gotobioimages": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
